@startuml
hide circle
skinparam classAttributeIconSize 0

package "UI Component" {
    class Ui {
        --
        + showError(message: String): void
        + showWelcome(): void
        + showGoodbye(): void
        + showMenu(): void
        + showNewExpense(expense: Expense): void
        {method} ... other show action methods
        + showFinancialSummary(budget: double, totalExpense: double, remainingBalance: double, expenses: List<Expense>): void
        + showBudgetStatus(status: BudgetStatus, remaining: double): void
        + showAddUsage(): void
        {method} ... other show usage methods
    }
}

package "Model Component" {
    class Expense {
        + formatForDisplay(): String
    }

    enum BudgetStatus <<enumeration>> {
        EXCEEDED
        EQUAL
        NEAR
        OK
    }
}

package "Logic Component" {
    abstract class Command {
        + {abstract} execute(expenseManager: ExpenseManager, ui: Ui): void
    }
}

Ui ..> Expense : displays
Ui ..> BudgetStatus : uses
Command ..> Ui : uses

note right of Ui
  All output is console-based
  using System.out.println().
end note

@enduml